Fix a crash when running with Broadway GDK backend

https://bugzilla.gnome.org/show_bug.cgi?id=673664